Refactory main banner ground
- 메인 헤더 배경 수정
  - 프로젝트 명시

  - rawcdn.githack.com 도메인 신고 감지 : 애드가드
  : threejs 배경 삭제

  - 패키지, 테스트, 유틸 정리

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./src/styles.css" />
-    <title>랜딩</title>
+    <title>Inseong | info</title>
   </head>
   <body>
     <div id="root"></div>
